# guanine-crystal-analysis

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
demo/: 1. Working with czi-files.ipynb  2. Executing guanine-crystal-analysis-plugin from a jupyter notebook.ipynb  3. Merge individual images labels to stack and how to use the napari-clusters-plotter.ipynb  3. Merging individual Images to stack-Copy1.ipynb  3. Merging individual Images to stack.ipynb
src/guanine_crystal_analysis/: __init__.py  _widget.py  napari.yaml
src/guanine_crystal_analysis/_tests/: test_sample_data.py  test_widget.py
src/guanine_crystal_analysis/cl_classifier/: object_classifier_20220523_intensity.cl  object_classifier_20220523_shape_intensity.cl  object_classifier_20220523_size.cl  object_classifier_20220523_size_intensity.cl  object_classifier_20220523_size_shape.cl  object_classifier_20220523_size_shape_intensity.cl
src/guanine_crystal_analysis/cl_segmenter/: object_segmenter_20220523_sorted.cl
