[metadata]
name = guanine-crystal-analysis
version = 0.0.1
description = A plugin for the guanine crystal segmentation, classification and characterization ibin the zebrafish eye
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biopo/guanine-crystal-analysis
author = Mara Lampert
author_email = mara.l_harriet.lampert@mailbox.tu-dresden.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/biopo/guanine-crystal-analysis/issues
    Documentation = https://github.com/biopo/guanine-crystal-analysis#README.md
    Source Code = https://github.com/biopo/guanine-crystal-analysis
    User Support = https://github.com/biopo/guanine-crystal-analysis/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    guanine-crystal-analysis = guanine_crystal_analysis:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
